--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.xiaoqiang</groupId>
     <artifactId>FactoryDesign</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+    </dependencies>
 
 </project>
